--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "nodemon": "^2.0.5"
+    "nodemon": "^2.0.5",
+    "sqlite": "^4.0.15",
+    "sqlite-async": "^1.1.0"
   }
 }
